test/mutation_analysis/s0238_product_of_array_except_self/hafis/starchat/mutants/6/result.txt
./test/mutation_analysis/s0238_product_of_array_except_self/hafis/starchat/mutants/6/Solution.java:24: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
